<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:orientation="horizontal">

            <TextView
                style="@style/customFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/title_24sp"
                tools:ignore="RtlCompat" />

            <TextView
                style="@style/customFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionMark"
                android:textColor="@color/colorPinkDark"
                android:textSize="@dimen/title_24sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            style="@style/customFontStyleRobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/enter_email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/ts_12sp"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:layout_weight="100"
            android:background="@color/color_back"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edtEmailMobile"
                style="@style/customFontStyleRobotoRegular"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="90"
                android:background="@null"
                android:hint="@string/hint_mail"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/color_black"
                android:textColorHint="@color/colorEditText"
                android:textSize="@dimen/tvCountry_18"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            style="@style/customFontStyleRobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/colorCancelButton"
            android:textSize="@dimen/tvEmailAddress_12sp"
            android:visibility="gone"
            tools:ignore="RtlCompat" />


    </LinearLayout>

    <Button
        android:id="@+id/fpContinue"
        style="@style/customFontStyleRobotoRegular"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pink_button"
        android:text="@string/Continue"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/subtitle_16sp"
        android:textStyle="bold" />

</RelativeLayout>